--- a/innerpagestyle.css
+++ b/innerpagestyle.css
@@ -34,3 +34,10 @@ html, body{
 	height: 100%;
 	border-radius: 10px;
 }
+
+@media only screen and (max-width: 500px){
+	.header{
+		font-size: 90px;
+	}
+
+}
