--- a/innerpagestyle.css
+++ b/innerpagestyle.css
@@ -35,3 +35,11 @@ html, body{
 	border-radius: 10px;
 }
 
+.footer{
+	box-shadow: 0px -1px 6px 0px gray;
+	color: gray;
+	letter-spacing: 2px;
+	font-size: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
