--- a/mystyle.css
+++ b/mystyle.css
@@ -88,6 +88,18 @@ html, body{
 	color: red;
 }
 
+.footer{
+	box-shadow: 0px -1px 6px 0px gray;
+	color: gray;
+	letter-spacing: 2px;
+	font-size: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	position: absolute;
+	bottom: 0%;
+	width: 100%;
+	text-align: center;
+}
 
 @media only screen and (max-width: 500px){
 	
