--- a/innerpagestyle.css
+++ b/innerpagestyle.css
@@ -43,3 +43,46 @@ html, body{
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
+
+/* Popup container - can be anything you want */
+.popup {
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  width: 250px;
+  visibility: hidden;
+  
+}
+
+/* The actual popup */
+.popup .popuptext {
+  background-color: rgb(241, 7, 119);
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px;
+  text-align: center;	
+  
+}
+
+
+/* Toggle this class - hide and show the popup */
+.show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;} 
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
