--- a/innerpagestyle.css
+++ b/innerpagestyle.css
@@ -9,9 +9,10 @@ html, body{
 .header{
 	text-align: center;
 	box-shadow: 0px 5px 5px 0px lightgrey;
-	padding-bottom: 10px;
-	color: rgb(241, 7, 119);
+	background-color: rgb(241, 7, 119);
+	color: white;
 	font-family: 'Dancing Script', cursive;
+	padding:5px;
 }
 
 .photocontainer{
@@ -26,7 +27,6 @@ html, body{
 	box-shadow: 0 0 5px grey;
 	padding: 10px;
 	margin-top: 20px;
-	
 }
 
 .Image{
@@ -68,6 +68,11 @@ html, body{
   
 }
 
+.magic{
+	color: gray;
+	letter-spacing: 2px;
+	font-weight: bold;
+}
 
 /* Toggle this class - hide and show the popup */
 .show {
